# Myq-Open-Door

./: .env  Optimize_authentication_with_FastAPI_dependencies.patch  README.md  efficiency_report.md  main.py  pyproject.toml
MyQGarageApp/: .gitignore  App.tsx  app.json  package.json
android-app/: app.js  index.html  manifest.json  styles.css  sw.js
static/: index.html
tests/: test_main.py
